dist_man1_MANS=

if BUILD_GLEECBTCD
  dist_man1_MANS+=gleecbtcd.1
endif

if ENABLE_QT
  dist_man1_MANS+=gleecbtc-qt.1
endif

if BUILD_GLEECBTC_CLI
  dist_man1_MANS+=gleecbtc-cli.1
endif

if BUILD_GLEECBTC_TX
  dist_man1_MANS+=gleecbtc-tx.1
endif

if ENABLE_WALLET
if BUILD_GLEECBTC_WALLET
  dist_man1_MANS+=gleecbtc-wallet.1
endif
endif
